clusters/home/media/app/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
spec:
  ipFamilyPolicy: PreferDualStack # Radarr & Sonarr </3 IPv6
  selector:
    app: prowlarr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 9696
