clusters/home/media/app/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  parentRefs:
    - name: gw-media
      sectionName: https
  hostnames:
    - prowlarr.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
